--- a/pages/welcome/welcome.wxml
+++ b/pages/welcome/welcome.wxml
@@ -1,7 +1,7 @@
 <view class="container">
     <image class="avatar" src="/images/avatar/1.png"></image>
-    <text class="motto">Hello, 七月</text>
+    <text class="motto">Mark</text>
     <view class="journey-container" bindtap="onTap">
-        <text class="journey">开启小程序之旅</text>
+        <text class="journey">进入</text>
     </view>
 </view>
